--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<p>brian.mathew.richer@gmail.com</p>
 			<p>(214)-558-9709</p>
 			<p>2612 Guadalupe St, Austin, TX 78705 Room 306</p>
-			<p><a href="resume.pdf">Resume</a></p>	
+			<p><a href="resume2016.pdf">Resume</a></p>	
 			<p><a href="http://github.com/zapper59">GitHub</a></p>
 			<p><a href="https://www.linkedin.com/in/brianmathewricher">LinkedIn</a></p>
 
@@ -46,6 +46,23 @@
 			<p><a href="hacktx2015">Doge Run</a></p>
 			<p><a href="http://www.cs.utexas.edu/~bririche/TwitToLib/frontend">Twit Libs!</a></p>
 		</div>
+		<!-- Start of StatCounter Code for Default Guide -->
+		<script type="text/javascript">
+		var sc_project=11110802; 
+		var sc_invisible=0; 
+		var sc_security="574df299"; 
+		var scJsHost = (("https:" == document.location.protocol) ?
+		"https://secure." : "http://www.");
+		document.write("<sc"+"ript type='text/javascript' src='" +
+		scJsHost+
+		"statcounter.com/counter/counter.js'></"+"script>");
+		</script>
+		<noscript><div class="statcounter"><a title="shopify traffic
+		stats" href="http://statcounter.com/shopify/"
+		target="_blank"><img class="statcounter"
+		src="//c.statcounter.com/11110802/0/574df299/0/"
+		alt="shopify traffic stats"></a></div></noscript>
+		<!-- End of StatCounter Code for Default Guide -->
 	</body>
 </html>
 
